# RuleKiln

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  contributing.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.agents/skills/dbos-python/: AGENTS.md
.claude/rules/: python.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: plan-mlflowObservabilityCoverage.prompt.md  plan-ruleQualityAndAblation.prompt.md
.github/workflows/: ci.yml
.rulekiln/runs/aaaaaaaa-1111-0000-0000-000000000001/: cases.normalized.jsonl  task.yaml
.rulekiln/runs/aaaaaaaa-1111-0000-0000-0000000000dc/: cases.normalized.jsonl  task.yaml
.rulekiln/runs/bbbbbbbb-1111-0000-0000-000000000102/: task.yaml  (+1 more)
.serena/: project.yml
Docs/: mvp_validation.md
Docs/dev/: docker.md
Docs/plans/: rulekiln_backend_design_adjustment_spec.md  rulekiln_dbos_durable_workflow_spec.md  rulekiln_minimal_mvp_ui_spec.md  rulekiln_mvp_plan_spec_v2.md
Docs/reference/: python_module_reference.md
Docs/task/: design_change_task.md  mvp_task.md  mvp_ui_tasks.md  rulekiln_mvp_tasks_v3_with_docker.md
docs/: README.md
docs/dev/: docker.md  loop_validation_report.md  phase2.md
docs/plans/: batch_API_IMP.md
docs/reference/: python_module_reference.md
docs/specs/: README.md  SPEC_Batch_API_Support.md  SPEC_benchmark_classroom_phases.md  SPEC_benchmark_datasets.md  SPEC_close_conflict_resolution_loop.md  SPEC_tiered_teachers_and_classroom_students.md  rulekiln_baseline_prompt_compiler_spec.md  rulekiln_minimal_mvp_ui_spec.md  rulekiln_model_usage_cost_tracking_spec.md  rulekiln_mvp_plan_spec_v2.md
docs/tasks/: README.md  design_change_task.md  mvp_task.md  mvp_ui_tasks.md  rulekiln_mvp_tasks_v3_with_docker.md  task_template.md
examples/: README.md
migrations/: env.py
migrations/versions/: 0001_mvp_schema.py  0002_add_selected_strategy.py  0003_add_queue_and_rule_columns.py  0004_add_model_call_events.py  0005_add_eval_case_results_and_idempotency_keys.py  0006_add_batch_jobs.py
scripts/: dev-down.sh  dev-up.sh
tests/contract/: test_output_routes_contract.py
tests/importers/: test_csv_importer.py
tests/integration/: test_benchmark_cli_smoke.py  test_dbos_spike_workflow.py  test_jobs_api.py  test_offline_e2e_fake_providers.py  test_split_policy_pipeline.py
tests/ui/: __init__.py  conftest.py  test_artifacts.py  test_cancel_job.py  test_create_job.py  test_eval_report.py  test_job_detail.py  test_job_list.py  test_new_job_form.py  test_phase_teacher_ui.py  test_preview.py  test_results.py  test_retry_job.py  test_root_redirect.py
tests/unit/: test_benchmark_banking77_splits.py  test_benchmark_classroom_phases.py  test_benchmark_classroom_schemas.py  test_benchmark_reporting_pruning_mode.py  test_chat_provider_retries.py  test_classroom_evaluator.py  test_classroom_schemas.py  test_clustering_distance_matrix.py  test_compile_baseline_prompt.py  test_conflict_review_agent.py  test_conflict_review_schema.py  test_cost_attribution.py  test_cost_calculator.py  test_error_classification.py  test_evaluation_contract.py  test_evaluator_resume.py  test_extraction_cache.py  test_failure_analysis.py  test_job_failure_policy.py  test_mlflow_token_metrics.py  test_model_call_event_repository.py  test_model_call_idempotency_key.py  test_phase_teacher_routing.py  test_prompt_compiler_determinism.py  test_provider_resolver.py  test_rate_limiter.py  test_request_schema.py  test_request_validator.py  test_rule_ablation.py  test_rule_provenance_artifact.py  test_rule_pruning.py  test_rule_refinement.py  test_security_masking.py  test_split_policy.py  test_statistics.py  test_token_cost_artifact.py  test_usage_aggregator.py  test_worker_case_id_namespace.py  test_worker_stage_model.py  test_worker_stage_model_v2.py
(+216 files in other folders)
