[project]
name = "rulekiln"
version = "0.1.0"
description = "A prompt compiler that turns cases into tested, versioned, auditable prompts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # Data / validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    # LLM agents
    "pydantic-ai[openai,anthropic,google-vertex,bedrock]>=0.2,<1",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    # ML / clustering
    "scikit-learn>=1.5,<2",
    "hdbscan>=0.8,<1",
    "numpy>=1.26,<3",
    # MLflow
    "mlflow>=3.5,<4",
    # HTTP / utils
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    # Logging
    "structlog>=24.2,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
    "anyio>=4,<5",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rulekiln"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "S", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
include = ["src", "tests"]
strict = true
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "external: tests that require real provider credentials (excluded from default CI)",
]
