[project]
name = "rulekiln"
version = "0.1.0"
description = "A prompt compiler that turns cases into tested, versioned, auditable prompts."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # API
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # Data / validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "dbos>=2.22,<3",
    # ML / clustering
    "scikit-learn>=1.5,<2",
    "hdbscan>=0.8,<1",
    "numpy>=1.26,<3",
    # MLflow
    "mlflow>=3.5,<4",
    # Templating / static files
    "jinja2>=3.1,<4",
    "aiofiles>=23.0,<25",
    # HTTP / utils
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    # Logging
    "structlog>=24.2,<26",
    "ruff>=0.15.14",
    "pydantic-ai>=1.105.0",
    "huggingface-hub>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.26,<1",
    "pytest-cov>=5,<7",
    "pyright>=1.1,<2",
    "pyright>=1.1,<2",
    "httpx>=0.27,<1",
    "anyio>=4,<5",
    "aiosqlite>=0.20,<1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rulekiln-worker = "rulekiln.workers.dbos_worker:main"
rulekiln-dbos-worker = "rulekiln.workers.dbos_worker:main"
rulekiln-benchmark = "rulekiln.benchmarks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rulekiln"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "S", "B", "C4", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
include = ["src", "tests"]
strict = true
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "external: tests that require real provider credentials (excluded from default CI)",
]

[dependency-groups]
dev = [
    "datasets>=4.8.5",
]
